--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,9 @@
       <div v-if="favouriteCountries.length" id="favourite_countries">
         <h2>Favourite Countries</h2>
         <ul>
-          <li v-for="favouriteCountry in favouriteCountries">{{favouriteCountry.name}} <img class="small-flag" :src="favouriteCountry.flag"/></li>
+          <li v-for="favouriteCountry in favouriteCountries">{{favouriteCountry.name}}
+            <img class="small-flag" :src="favouriteCountry.flag"/>
+          </li>
         </ul>
       </div>
     </div>
