--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
 
       <label for="country_select">Select a Country:</label>
       <select id="country_select" v-model="selectedCountryIndex" v-on:change="updateSelectedCountry">
-        <option v-for="(country, index) in countries" :value="index">{{country.name}}</option>
+        <option v-for="(country, index) in countries" v-bind:value="index">{{country.name}}</option>
       </select>
 
       <div id="selected_country" v-if="selectedCountry">
 
         <h2> {{selectedCountry.name}} </h2>
         <p> Population: {{selectedCountry.population}} </p>
-        <img class="lrg-flag" :src="selectedCountry.flag" />
+        <img class="lrg-flag" v-bind:src="selectedCountry.flag" />
 
       </div>
     </div>
